--- a/wordpress-nginx-https/docker-compose.yml
+++ b/wordpress-nginx-https/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: wordpress:latest
     container_name: wordpress
     volumes:
-      - ./wordpress/wp-content:/var/www/html/wp-content
+      - ./wordpress:/var/www/html
     environment:
       WORDPRESS_DB_HOST: mysql
       WORDPRESS_DB_USER: wordpress
