--- a/wordpress/nginx/nginx.conf
+++ b/wordpress/nginx/nginx.conf
@@ -41,10 +41,6 @@ http {
         rewrite ^(.*)$  https://$host$1 permanent;
     }
 
-    upstream wp {
-        server wordpress;
-    }
-
     server {
         server_name example.com www.example.com;
         listen 443 ssl http2;
@@ -58,7 +54,7 @@ http {
             proxy_set_header X-Forwarded-For $remote_addr;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_pass http://wp/;
+            proxy_pass http://wordpress;
         }
     }
 }
