--- a/gost/docker-compose.yml
+++ b/gost/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   gost:
     image: ginuerzh/gost
     container_name: gost
-    ports:
-      - 18888:8080
     restart: always
-    command: ["-L", "${LOCAL}", "-F" ,"${FORWARD}"]
+    ports:
+      - 8080:8080
+    command: [ "-L", ":8080", "-F" ,"http://admin:123456@192.168.1.1:8081" ]
