--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -8,6 +8,6 @@ services:
     ports:
       - 5432:5432
     environment:
-      POSTGRES_PASSWORD: ${PG_PASSWORD}
+      POSTGRES_PASSWORD: 123456
     volumes:
     - ./data:/var/lib/postgresql/data
