--- a/wordpress/nginx/nginx.conf
+++ b/wordpress/nginx/nginx.conf
@@ -44,8 +44,8 @@ http {
     server {
         server_name example.com www.example.com;
         listen 443 ssl http2;
-        ssl_certificate certs/com-example-certificate.pem;
-        ssl_certificate_key certs/com-example-key.key;
+        ssl_certificate certs/cert.pem;
+        ssl_certificate_key certs/cert.key;
         ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         
