feat: update gost docker compose

--- a/gost/docker-compose.yml
+++ b/gost/docker-compose.yml
@@ -2,19 +2,19 @@ version: '3.1'
 
 services:
   gost:
-    image: ginuerzh/gost
+    image: gogost/gost
     container_name: gost
     restart: always
     ports:
-      - 8080:8080
-    command: [ "-L", ":8080", "-F" ,"http://admin:123456@192.168.1.1:8081" ]
+      - 18080:8080
+    command: -L :8080 -F 127.0.0.1:40000
 
   gost-https:
-    image: ginuerzh/gost
+    image: gogost/gost
     container_name: gost-https
-    network_mode: "host"
     restart: always
     volumes:
-      - ./cert.pem:/bin/cert.pem
-      - ./cert.key:/bin/key.pem
-    command: [ "-L", "http2://:443", "-F", "127.0.0.1:40000" ]
+      - /etc/letsencrypt/live/{domain}/fullchain.pem:/bin/cert.pem
+      - /etc/letsencrypt/live/{domain}/privkey.pem:/bin/key.pem
+    network_mode: host
+    command: -L http2://{username}:{password}@{domain}:443?probeResistance=code:403 -F 127.0.0.1:40000
