--- a/wordpress/docker-compose.yml
+++ b/wordpress/docker-compose.yml
@@ -1,42 +1,50 @@
 version: '3.1'
 
 services:
-  wordpress:
-    image: wordpress:latest
-    container_name: wordpress
-    volumes:
-      - ./wordpress:/var/www/html
+  mysql:
+    image: mysql:8.2.0
+    container_name: mysql
+    restart: always
+    ports:
+      - "3306:3306"
     environment:
-      WORDPRESS_DB_HOST: mysql
-      WORDPRESS_DB_USER: wordpress
-      WORDPRESS_DB_PASSWORD: wordpress
-      WORDPRESS_DB_NAME: wordpress
+      MYSQL_ROOT_PASSWORD: 123456
+    volumes:
+      - ~/data/mysql:/var/lib/mysql
+      - /etc/timezone:/etc/timezone:ro
+      - /etc/localtime:/etc/localtime:ro
+    command:
+      - --default-authentication-plugin=mysql_native_password
+  
+  wordpress:
+    image: wordpress:6.5.2-fpm-alpine
+    container_name: wordpress
+    restart: always
+    ports:
+      - 9000:9000
+    environment:
+      - WORDPRESS_DB_HOST=mysql:3306
+      - WORDPRESS_DB_USER=root
+      - WORDPRESS_DB_PASSWORD=123456
+      - WORDPRESS_DB_NAME=wp_db
+    volumes:
+      - ~/data/wordpress:/var/www/html
     depends_on:
       - mysql
-    restart: always
 
-  mysql:
-    image: mysql:5.7
-    container_name: mysql
-    volumes:
-      - ./mysql:/var/lib/mysql
-    environment:
-      MYSQL_ROOT_PASSWORD: wordpress
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-    restart: always
-
-  nginx:
+  ngx:
     image: nginx:latest
-    container_name: nginx
+    container_name: ngx
     ports:
-      - 80:80
-      - 443:443
+      - "80:80"
+      - "443:443"
+    restart: always
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/certs/cert.pem:/etc/nginx/certs/cert.pem
-      - ./nginx/certs/cert.key:/etc/nginx/certs/cert.key
+      - ./ngx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./ngx/mime.types:/etc/nginx/mime.types:ro
+      - ./ngx/logs:/etc/nginx/logs
+      - ./ngx/conf.d:/etc/nginx/conf.d
+      - ./certs:/etc/nginx/certs
+      - ~/data/wordpress:/var/www/html
     depends_on:
       - wordpress
-    restart: always
